[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reticulumapi"
version = "0.1.0"
description = "REST + WebSocket API daemon for the Reticulum Network Stack"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Chad Attermann" }]
dependencies = [
    "rns>=1.0",
    "aiohttp>=3.9",
    "cryptography>=42.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-aiohttp>=1.0",
    "pytest-timeout>=2.2",
]

[project.scripts]
rnsapid = "rnsapi.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30
